--- a/carson-bio.html
+++ b/carson-bio.html
@@ -94,7 +94,7 @@
             </header>
 
             <div class="col-md-4">
-              <p>Carson has over 20 years of technical expertise in print and digital. As the Creative Lab Director, he oversees the production art and graphic design product of the agency.</p>
+              <p>Carson has over 20 years of technical expertise in print and digital. As the Studio Director, he oversees the production art and graphic design product of the agency.</p>
             </div>
             <div class="col-md-4">
               <p>Carson provides out-of-the-box thinking to ensure that all tactics can be fully integrated across all channels for maximum exposure and reach.</p>
