--- a/kristin-bio.html
+++ b/kristin-bio.html
@@ -100,7 +100,7 @@
               <p>Kristin prides herself on keeping a positive attitude while consistently exceeding expectations in a reliable, creative, and accountable manner.</p>
             </div>
             <div class="col-md-4">
-              <p>Kristin has 21 years of media buying/ sales/marketing experience that includes traditional TV, outdoor, print, and much more.</p>
+              <p>Kristin has 21 years of media buying, sales, and marketing experience that includes traditional TV, outdoor, print, and much more.</p>
             </div>
           </div><!-- / .row -->
 
