--- a/brian-bio.html
+++ b/brian-bio.html
@@ -89,7 +89,7 @@
             <header class="sec-heading">
               <!-- <h2 class="bio-heading">Brian Dougherty</h2> -->
               <img src="assets/images/team/brian-bio.png" alt="Team Member" class="img-responsive bio-image">
-              <h2 class="bio-heading">Cheif Exectutive Officer</h2>
+              <h2 class="bio-heading">Chief Executive Officer</h2>
               <!-- <span class="subheading">Cheif Executive Officer</span> -->
             </header>
 
