--- a/brian-bio.html
+++ b/brian-bio.html
@@ -88,7 +88,7 @@
             
             <header class="sec-heading">
               <!-- <h2 class="bio-heading">Brian Dougherty</h2> -->
-              <img src="assets/images/team/brian-bio.png" alt="Team Member" class="img-responsive bio-image">
+              <img src="assets/images/team/brian-bio.png" alt="Brian Header Image" class="img-responsive bio-image">
               <h2 class="bio-heading">Chief Executive Officer</h2>
               <!-- <span class="subheading">Cheif Executive Officer</span> -->
             </header>
