--- a/rocky-bio.html
+++ b/rocky-bio.html
@@ -88,7 +88,7 @@
             
             <header class="sec-heading">
               <!-- <h2 class="bio-heading">Brian Dougherty</h2> -->
-              <img src="assets/images/team/rocky-bio.png" alt="Team Member" class="img-responsive bio-image">
+              <img src="assets/images/team/rocky-bio.png" alt="Rocky Header Image" class="img-responsive bio-image">
               <h2 class="bio-heading">Social Media Manager</h2>
               <!-- <span class="subheading">Cheif Executive Officer</span> -->
             </header>
