--- a/tripp-bio.html
+++ b/tripp-bio.html
@@ -89,7 +89,7 @@
             <header class="sec-heading">
               <!-- <h2 class="bio-heading">Brian Dougherty</h2> -->
               <img src="assets/images/team/tripp-bio.png" alt="Tripp Header Photo" class="img-responsive bio-image">
-              <h2 class="bio-heading">Web Developer</h2>
+              <h2 class="bio-heading">Digital Integration Director</h2>
               <!-- <span class="subheading">Cheif Executive Officer</span> -->
             </header>
 
