--- a/carson-bio.html
+++ b/carson-bio.html
@@ -83,12 +83,12 @@
 
         <!-- ========== Enter Your Content Here ========== -->
 
-        <section class="container section">
+        <section class="container section ft-centered">
           <div class="row ws-m">
             
-            <header class="sec-heading">
+            <header class="sec-heading img-responsive">
               <!-- <h2 class="bio-heading">Carson Kraig</h2> -->
-              <img src="assets/images/team/carson-bio.png" alt="Carson Profile Photo" class="img-responsive bio-image">
+              <img src="assets/images/team/carson-bio.png" alt="Carson Profile Photo" class="bio-image">
               <h2 class="bio-heading">Studio Director</h2>
               <!-- <span class="subheading">Studio Director</span> -->
             </header>
@@ -103,15 +103,6 @@
               <p>Carson has produced successful campaigns for clients such as Banner Health, Baltimore Washington Medical Center, Cricket Communications, Denver International Airport, Sports Authority, Coors Brewing Company, OrthoColorado Hospital, Centura Health, CSU College of Business, CSU Online, E 470, and the University of Tennessee at Martin.</p>
             </div>
           </div><!-- / .row -->
-
-          <!-- <div class="row">
-            <div class="col-md-6">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, pariatur, libero. Necessitatibus, eveniet, voluptatibus. Voluptatum dolorem nihil cum magnam eveniet impedit veniam assumenda nostrum, sequi accusamus, molestias expedita soluta fugit distinctio quisquam! Molestias adipisci dolores voluptas pariatur ut, modi, consectetur possimus nam ipsum a. Ratione.</p>
-            </div>
-            <div class="col-md-6">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, pariatur, libero. Necessitatibus, eveniet, voluptatibus. Voluptatum dolorem nihil cum magnam eveniet impedit veniam assumenda nostrum, sequi accusamus, molestias expedita soluta fugit distinctio quisquam! Molestias adipisci dolores voluptas pariatur ut, modi, consectetur possimus nam ipsum a. Ratione.</p>
-            </div>
-          </div> -->
         </section><!-- / .container -->
 
 
